--- a/fundamentos HTML/CSS reset.html
+++ b/fundamentos HTML/CSS reset.html
@@ -3,6 +3,7 @@
   <head>
     <title>Título</title>
     <meta charset = "utf-8" />
+    <link rel="stylesheet" href="css reset.css">
   </head>
 
 <body>
@@ -23,7 +24,6 @@
             <li><a href="index_com_layout.html">index_com_layout</a> </li>
             <li><a href="tipografia.html">tipografia</a> </li>
             <li><a href="CSS reset.html">css reset</a> </li>
-            <li><a href="normalize.html">css normalize</a></li>
         </ul>
         <footer>Rodapé da seção</footer>
     </section>
