--- a/site/contato.html
+++ b/site/contato.html
@@ -43,7 +43,7 @@
                 <li>Email: <strong>contatos@sjfwj.com</strong></li>
                 <li>Ninguem usa Skype: <strong>ngmUsaIsso</strong></li>
             </div>
-            <div class="coluna col7">
+            <div class="coluna col7 contato">
                 <h2>Envie sua mensagem</em></h2>
                 <form action="">
                     <label for="nome">Seu nome</label>
