--- a/my_little_projets/jogo_da_velha/index.html
+++ b/my_little_projets/jogo_da_velha/index.html
@@ -10,15 +10,15 @@
 <body>
     <div class="vez">X</div>
     <div class="grid">
-        <div class="square" id="sq1"></div>
-        <div class="square" id="sq2"></div>
-        <div class="square" id="sq3"></div>
-        <div class="square" id="sq4"></div>
-        <div class="square" id="sq5"></div>
-        <div class="square" id="sq6"></div>
-        <div class="square" id="sq7"></div>
-        <div class="square" id="sq8"></div>
-        <div class="square" id="sq9"></div>
+        <div square="empty" id="sq1"></div>
+        <div square="empty" id="sq2"></div>
+        <div square="empty" id="sq3"></div>
+        <div square="empty" id="sq4"></div>
+        <div square="empty" id="sq5"></div>
+        <div square="empty" id="sq6"></div>
+        <div square="empty" id="sq7"></div>
+        <div square="empty" id="sq8"></div>
+        <div square="empty" id="sq9"></div>
     </div>
     <script src="script.js"></script>
 </body>
