--- a/my_little_projets/jogo_da_velha/index.html
+++ b/my_little_projets/jogo_da_velha/index.html
@@ -8,6 +8,7 @@
     <title>JOGO DA VELHA</title>
 </head>
 <body>
+    <h1>JOGO DA VELHA</h1>
     <div class="vez">X</div>
     <div class="grid">
         <div square="empty" id="sq1"></div>
